[gd_scene load_steps=11 format=3 uid="uid://byde0o5ve0pdy"]

[ext_resource type="Script" path="res://scripts/plant_enemy.gd" id="1_o14go"]
[ext_resource type="Texture2D" uid="uid://bry0msj0gxjkp" path="res://assets/enemies/plant_enemy.png" id="1_yob3k"]
[ext_resource type="PackedScene" uid="uid://bexn610a8mmg" path="res://scenes/hurtbox.tscn" id="2_4nlu4"]
[ext_resource type="PackedScene" uid="uid://b8ewwpijlarlp" path="res://scenes/hitbox.tscn" id="3_n3ige"]
[ext_resource type="PackedScene" uid="uid://drv25xhx23l5d" path="res://scenes/statistics.tscn" id="5_eqte0"]

[sub_resource type="Animation" id="Animation_mes7u"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bullet"
}]
}

[sub_resource type="Animation" id="Animation_xa26i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_50h6c"]
_data = {
"RESET": SubResource("Animation_xa26i"),
"attack": SubResource("Animation_mes7u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nptf"]
size = Vector2(14, 11)

[sub_resource type="CircleShape2D" id="CircleShape2D_oags7"]
radius = 5.0

[node name="PlantEnemy" type="Node2D"]
script = ExtResource("1_o14go")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_yob3k")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_50h6c")
}
autoplay = "attack"

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -10)

[node name="FireDirection" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="Hurtbox" parent="." instance=ExtResource("2_4nlu4")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_3nptf")

[node name="Hitbox" parent="." instance=ExtResource("3_n3ige")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_oags7")

[node name="Statistics" parent="." instance=ExtResource("5_eqte0")]

[node name="DeathEffectLocation" type="Marker2D" parent="."]
position = Vector2(0, -6)

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Statistics" to="." method="_on_statistics_no_health"]
